; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fsck.c_mark_object_for_connectivity.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fsck.c_mark_object_for_connectivity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.object = type { i32 }

@HAS_OBJ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.object_id*)* @mark_object_for_connectivity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mark_object_for_connectivity(%struct.object_id* %0) #0 {
  %2 = alloca %struct.object_id*, align 8
  %3 = alloca %struct.object*, align 8
  store %struct.object_id* %0, %struct.object_id** %2, align 8
  %4 = load %struct.object_id*, %struct.object_id** %2, align 8
  %5 = call %struct.object* @lookup_unknown_object(%struct.object_id* %4)
  store %struct.object* %5, %struct.object** %3, align 8
  %6 = load i32, i32* @HAS_OBJ, align 4
  %7 = load %struct.object*, %struct.object** %3, align 8
  %8 = getelementptr inbounds %struct.object, %struct.object* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = or i32 %9, %6
  store i32 %10, i32* %8, align 4
  ret void
}

declare dso_local %struct.object* @lookup_unknown_object(%struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
